--- a/Hornet/Hornet.vcxproj.filters
+++ b/Hornet/Hornet.vcxproj.filters
@@ -128,5 +128,8 @@
     <ClInclude Include="Rock.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerMovement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
